2009-12-09  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Markup/XamlReaderTest.cs: If we're setting a
	  value of type Binding to an object we need to check for the
	  existance of a DP first and if that doesn't exist, we look
	  up a standard CLR property.

2009-12-09  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Markup/XamlReaderTest.cs: When using a
	  MoonlightTypeConverter, if the source type is directly
	  assignable to the destination, we should just return the
	  value.

2009-12-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* misc/DefaultValues.cs: Remove a MoonlightBug.

2009-12-02  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Security.Cryptography/AesTest.cs: New. Adapted from
	corlib Rijndael unit tests (block size and modes limitations)

2009-12-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ScrollContentPresenterTest.cs: Add
	  better handling of invalid scroll offsets to
	  ScrollContentPresenter.

2009-12-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ContentPresenterTest.cs: Add a test
	  to prove that ContentPresenter.Content is still copied to
	  the DataContext even if the value is null. i.e. ClearValue
	  is not called on DataContext when the Content is null. 

2009-12-02  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Data/BindingTest.cs: ContentPresenter copies
	  its Content to its DataContext whenever it isn't a
	  UIElement, therefore if we're databinding the Content
	  property we need to use the parent DataContext in order to
	  get the correct value.

2009-12-01  Brad Taylor  <brad@getcoded.net>

	* System.Windows.Automation.Peers/ProgressBarAutomationPeerTest.cs:
	Remove spurious attribute.

2009-12-01  Brad Taylor  <brad@getcoded.net>

	* System.Windows.Automation.Peers/ProgressBarAutomationPeerTest.cs:
	Verify that ProgressBar is read only and throws a
	InvalidOperationException when SetValue is called.
